--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-torch==2.0.1
-torch-geometric==2.0.1
-torch-scatter==2.0.9
-pandas==2.0.1
+-f https://data.pyg.org/whl/torch-2.0.0+cpu.html
+torch==2.0.1+cu118
+torch-geometric==2.3.1
+torch-scatter==2.1.1+pt20cpu
+torch-sparse==0.6.17+pt20cpu
+torch-cluster==1.6.1+pt20cpu
+torch-spline-conv==1.2.2+pt20cpu
+pandas==1.5.3
