--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ torch-sparse==0.6.17+pt20cpu
 torch-cluster==1.6.1+pt20cpu
 torch-spline-conv==1.2.2+pt20cpu
 pandas==1.5.3
+torch==2.0.1
+matplotlib==3.7.1
+tensorboard==2.13.0
